# SmokenMirrors

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  constants.h  engine.cpp  engine.h  main.cpp  platform_dependent.cpp  platform_dependent.h  shaders.cpp  shaders.h
src/shaders/: CMakeLists.txt  fs_color.sc  main.cpp  varying.def.sc  vs_color.sc
